--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.9.1",
     "multer": "^1.4.2",
     "nodemon": "^2.0.2",
+    "sass": "^1.26.3",
     "socket.io": "^2.3.0"
   }
 }
