--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "config": "^3.2.5",
     "express": "^4.17.1",
     "express-validator": "^6.3.1",
+    "formik": "^2.1.4",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "mongoose": "^5.9.1",
