--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.9.1",
     "multer": "^1.4.2",
     "nodemon": "^2.0.2",
+    "react-scroll": "^1.7.16",
     "sass": "^1.26.3",
     "socket.io": "^2.3.0"
   }
